added you win fixed bug and added button start game

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<title>Minesweeper</title>
 </head>
 <body>
+	<button id="startt" onclick="location.reload();">START GAME</button>
 	<table>
 		
 	</table>
