deleted flag.png fixed bug but looked at a new bug

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 	<title>Minesweeper</title>
 </head>
 <body>
-	<button id="startt" onclick="location.reload();">START GAME</button>
+	<!-- levels button should be added -->
+	<button id="start_game" onclick="start()">START GAME</button>
 	<table>
 		
 	</table>
