--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<!-- levels button should be added -->
-	<button id="start_game" onclick="start()">START GAME</button>
+	<div id="faces" class="smile" onclick="start()"></div>
 	<table>
 		
 	</table>
