added select levels

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 <body>
 	<!-- levels button should be added -->
 	<div id="faces" class="smile" onclick="start()"></div>
+	<select>
+		<option value="easy">Easy</option>
+		<option value="medium">Medium</option>
+		<option value="hard">Hard</option>
+	</select>
 	<table>
 		
 	</table>
