added number flag length

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 	<title>Minesweeper</title>
 </head>
 <body>
-	<!-- levels button should be added -->
+	<div id="mines_hundreds" class="flag_length"></div>
+	<div id="mines_tens" class="flag_length"></div>
+	<div id="mines_ones" class="flag_length"></div>
 	<div id="faces" class="smile" onclick="start()"></div>
 	<select>
 		<option value="easy">Easy</option>
