fixed flag  bug

--- a/index.html
+++ b/index.html
@@ -8,15 +8,19 @@
 	<title>Minesweeper</title>
 </head>
 <body>
-	<div id="mines_hundreds" class="flag_length"></div>
-	<div id="mines_tens" class="flag_length"></div>
-	<div id="mines_ones" class="flag_length"></div>
-	<div id="faces" class="smile" onclick="start()"></div>
-	<select>
-		<option value="easy">Easy</option>
-		<option value="medium">Medium</option>
-		<option value="hard">Hard</option>
-	</select>
+	<div id="header">
+		<div id="numbers_length">
+			<div id="mines_hundreds" class="flag_length"></div>
+			<div id="mines_tens" class="flag_length"></div>
+			<div id="mines_ones" class="flag_length"></div>
+		</div>
+		<div id="faces" class="smile" onclick="start()"></div>
+		<select>
+			<option value="easy">Easy</option>
+			<option value="medium">Medium</option>
+			<option value="hard">Hard</option>
+		</select>
+	</div>
 	<table>
 		
 	</table>
