added win page, new value coin, win lose png and timer

--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
 	<table>
 		
 	</table>
+	<div id="you_win">
+		<span id="you_win_back"></span>
+		<span id="score"></span>
+		<span id="record"></span>
+		<span id="coin">10 coin</span>
+		<input type="button" value="Continue" onclick="$('#you_win').hide(); start()">
+	</div>
 	<script src="js.js"></script>
 </body>
 </html>
